JDK-8003881: Prevent lambda implementing inner classes from allowing attacker to create new instances